Finish with JSON parser
Finish with JSON parser. Fix assembly loading

--- a/TestControlTool.Web/Views/Account/Register.cshtml
+++ b/TestControlTool.Web/Views/Account/Register.cshtml
@@ -12,7 +12,7 @@
     <div style="width: 50%; float: left; border-right: solid 1px darkgray">
         <h2 class="form-signin-heading">TestControlTool</h2>
         <div style="color: darkgray">
-            TestControlTool is very useful thing for managing tasks for QA
+            Test Control Tool allows you to use UI and Backend automated testing in an easy and comfortable way.
         </div>
     </div>
     <div style="margin-left: 55%; horiz-align: right">
