--- a/TestControlTool.Web/Views/Home/Servers.cshtml
+++ b/TestControlTool.Web/Views/Home/Servers.cshtml
@@ -45,7 +45,7 @@
 
 </table>
 <p>
-    @Html.ActionLink("Create New", "Create", "Server", null, new {@class = "btn"})
+    @Html.ActionLink("Add VM Server", "Create", "Server", null, new {@class = "btn"})
 </p>
 <script type="text/javascript">
     function removeServer(id) {
