--- a/TestControlTool.Web/Views/Home/Tasks.cshtml
+++ b/TestControlTool.Web/Views/Home/Tasks.cshtml
@@ -73,7 +73,7 @@
 
 </table>
 <p>
-    @Html.ActionLink("Create New", "Create", "Task", null, new { @class = "btn" })
+    @Html.ActionLink("Create", "Create", "Task", null, new { @class = "btn" })
 </p>
 <script type="text/javascript">
     function removeTask(id) {
