--- a/TestControlTool.Web/Views/Task/Edit.cshtml
+++ b/TestControlTool.Web/Views/Task/Edit.cshtml
@@ -61,7 +61,7 @@
 
                     <div class="control-group">
                         <label class="control-label">
-                            <button class="btn-primary btn-large" onclick="saveTasks('@Model.Task.Id', '/Task/Edit', '@Url.Action("Index", "Task")'); return false;" style="margin-left: auto;">Save</button>
+                            <button id="SaveButton" class="btn-primary btn-large" onclick="saveTasks('@Model.Task.Id', '/Task/Edit', '@Url.Action("Index", "Task")'); return false;" style="margin-left: auto;">Save</button>
                         </label>
                         <div class="controls"></div>
                     </div>
@@ -98,8 +98,8 @@
                                 }
                                 catch (Exception e)
                                 {
-                                    <script type="text/javascript"> alert('@task.File');</script>
-                                    <script type="text/javascript"> alert('@e.Message');</script>
+                                    @*<script type="text/javascript"> alert('@task.File');</script>
+                                    <script type="text/javascript"> alert('@e.Message');</script>*@
                                 }
                                 <li id="@taskModel.Name" type="@taskModel.Type.ToString()" machine="@taskModel.Machine" json="@taskModel.GetJson()">
                                     <a onclick="editTestSuiteTask(this)" href="#">@taskModel.Name</a>
@@ -114,25 +114,25 @@
                         }
                     </ul>
                     <div class="btn-group">
-                        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">Add new<span class="caret"></span></a>
+                        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">Add<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a data-toggle="modal" href="#DeployInstallJobModal">DeployInstall Job</a></li>
+                            <li><a data-toggle="modal" href="#DeployInstallJobModal">Deploy / Install Job</a></li>
                             <li class="divider"></li>
-                            @if ((int)(TestControlTool.Web.TestControlToolApplication.AccountController.CachedAccounts.Single(x => x.Login == User.Identity.Name).Type) >= 1)
+                            @if ((int)(TestControlToolApplication.AccountController.CachedAccounts.Single(x => x.Login == User.Identity.Name).Type) >= 1)
                             {
-                                <li><a data-toggle="modal" href="#" onclick="showNewTestSuite('@TaskType.UISuiteTrunk.ToString()'); return false;">Test Suite for Trunk</a></li>
+                                <li><a data-toggle="modal" href="#" onclick="showNewTestSuite('@TaskType.UISuiteTrunk.ToString()'); return false;">UI Test Suite for Trunk</a></li>
                             }
-                            <li><a data-toggle="modal" href="#" onclick="showNewTestSuite('@TaskType.UISuiteRelease.ToString()'); return false;">Test Suite for Release</a></li>
+                            <li><a data-toggle="modal" href="#" onclick="showNewTestSuite('@TaskType.UISuiteRelease.ToString()'); return false;">UI Test Suite for 5.3.*</a></li>
                         </ul>
                     </div>
                     <div class="btn-group">
-                        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">Upload existing xml<span class="caret"></span></a>
+                        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">Upload Existing XML<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            @if ((int)(TestControlTool.Web.TestControlToolApplication.AccountController.CachedAccounts.Single(x => x.Login == User.Identity.Name).Type) >= 1)
+                            @if ((int)(TestControlToolApplication.AccountController.CachedAccounts.Single(x => x.Login == User.Identity.Name).Type) >= 1)
                             {
-                                <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal('@TaskType.UISuiteTrunk.ToString()'); return false;">Test Suite for Trunk</a></li>
+                                <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal('@TaskType.UISuiteTrunk.ToString()'); return false;">UI Test Suite for Trunk</a></li>
                             }
-                            <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal('@TaskType.UISuiteRelease.ToString()'); return false;">Test Suite for Release</a></li>
+                            <li><a data-toggle="modal" href="#" onclick="showUploadTestSuiteModal('@TaskType.UISuiteRelease.ToString()'); return false;">Ui Test Suite for 5.3.*</a></li>
                         </ul>
                     </div>
                 </fieldset>
