--- a/TestControlTool.Web/Views/Account/ChangePassword.cshtml
+++ b/TestControlTool.Web/Views/Account/ChangePassword.cshtml
@@ -6,10 +6,10 @@
 
 @using (Html.BeginForm("ChangePassword", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-signin" }))
 {
-    <div style="width: 50%; float: left;border-right: solid 1px darkgray">
+    <div style="width: 50%; float: left; border-right: solid 1px darkgray">
         <h2 class="form-signin-heading">TestControlTool</h2>
         <div style="color: darkgray">
-            TestControlTool is very useful thing for managing tasks for QA
+            Test Control Tool allows you to use UI and Backend automated testing in an easy and comfortable way.
         </div>
     </div>
     <div style="margin-left: 55%; horiz-align: right">
@@ -26,13 +26,14 @@
         <div class="text-left text-error">
             <p>@Html.ValidationMessageFor(m => m.NewPassword)</p>
         </div>
-        
+
         @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "input-block-level", placeholder = "Confirm Password" })
         <div class="text-left text-error">
             <p>@Html.ValidationMessageFor(m => m.ConfirmPassword)</p>
         </div>
-        
-        <p><button class="btn btn-large btn-primary" type="submit">Change</button></p>
+
+        <p>
+            <button class="btn btn-large btn-primary" type="submit">Change</button></p>
 
         <div class="text-left text-error">
             <p>@Html.ValidationSummary(true)</p>
