--- a/TestControlTool.Web/Views/Server/Create.cshtml
+++ b/TestControlTool.Web/Views/Server/Create.cshtml
@@ -34,7 +34,7 @@
             @Html.Editor(property.Name)
         }
 		<div class="form-actions">
-            <button type="submit" class="btn btn-primary">Save changes</button>
+            <button type="submit" class="btn btn-primary">Save Changes</button>
             @Html.ActionLink("Cancel", "Servers", "Home", null, new { @class = "btn " })
           </div>
     </fieldset>
