--- a/TestControlTool.Web/Views/Task/TestForm.cshtml
+++ b/TestControlTool.Web/Views/Task/TestForm.cshtml
@@ -96,17 +96,8 @@
             e.stopPropagation(); //Once popover is hidden stop the event from going to parent
         });
 
-        $("[data-disable-enabled='true']").each(function () {
-            var obj = this;
-
-            var disablingProperty = $(obj).attr('data-disabling-property');
-            var disablingValue = $(obj).attr('data-disabling-value');
-
-            $("#" + disablingProperty).on("change", function () {
-                DisableByAttribute(obj, disablingProperty, disablingValue, true);
-            });
-
-            DisableByAttribute(obj, disablingProperty, disablingValue, false);
+        $('#testFormDiv').find("[data-disable-enabled='true']").each(function () {
+            Disable(this);
         });
     });
 
